--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+html,body {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
 body {
     background: #00c3ff;
     background: -webkit-linear-gradient(to right, #ffff1c, #00c3ff);
@@ -29,6 +35,16 @@ a {
 .menu ul li a:hover {
 	color: rgb(78, 200, 160);
     transition: 0.5s;
+}
+
+.menuDiv {
+    float: right;
+    margin: 17px;
+}
+
+.menuDiv li{
+    margin: 2rem;
+    padding: 2rem;
 }
 
 h3 {
